# desafio_brickup

./: .gitignore  README.md  pyproject.toml
app/: dbConnection.py  main.py
app/database/: database.py  dbConnection.py  models.py
app/models/: item.py
app/repositories/: fileRepository.py  itemRepository.py  userRepository.py
app/router/: authRouter.py  fileRouter.py  itemRouter.py  userRouter.py
app/schemas/: file.py  getterDict.py  item.py  token.py  user.py
app/utils/: JWT.py  hashing.py  oauth2.py  pdfParser.py
